--- a/service/pom.xml
+++ b/service/pom.xml
@@ -148,6 +148,26 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+
+
+	<!-- json doc -->
+		<dependency>
+			<groupId>org.jsondoc</groupId>
+			<artifactId>jsondoc-springmvc</artifactId>
+			<version>1.1.16</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.javassist</groupId>
+					<artifactId>javassist</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.jsondoc</groupId>
+			<artifactId>jsondoc-ui-webjar</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
